rebranded new ui

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>SealTrack - Secure Document Signing Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>docu-chain-global</title>
-    <meta name="description" content="Blockchain Document Signing Platform" />
-    <meta name="author" content="DocuChain" />
+    <meta name="author" content="SealTrack" />
+    <meta name="description" content="Secure document signing and verification platform powered by blockchain technology." />
+    <meta property="og:title" content="SealTrack - Secure Document Signing Platform" />
+    <meta property="og:description" content="Sign and verify documents securely with blockchain technology." />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="docu-chain-global" />
-    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
