--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Secure document signing and verification platform powered by blockchain technology." />
     <meta property="og:title" content="SealTrack - Secure Document Signing Platform" />
     <meta property="og:description" content="Sign and verify documents securely with blockchain technology." />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/latest_logo.ico" />
 
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
